working on agent and roles
